--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <script src="assets/js/vendor/jquery.gamequery.soundwrapper.html5-0.6.0.js"></script>
 
         <script src="assets/js/plugins.js"></script>
-        <script src="assets/js/Game.js"></script>
+        <script src="assets/js/game.js"></script>
         <script src="assets/js/main.js"></script>
 
     </body>
