--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
         <script src="assets/js/plugins.js"></script>
         <script src="assets/js/game.js"></script>
+        <script src="assets/js/player.js"></script>
+        <script src="assets/js/obstacle.js"></script>
         <script src="assets/js/main.js"></script>
 
     </body>
